--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -5,7 +5,26 @@
         margin-top: 20px;
         padding: 0;
         border-collapse: collapse;
-        
+
+        .title-col {
+            width: 40%;
+        }
+        .qty-col {
+            width: 5%;
+        }
+        .actions-col {
+            width: 15%;
+        }
+        .price-col {
+            width: 16.67%;
+        }
+        .total-col {
+            width: 16.67%;
+        }
+        .remove-col {
+            width: 6.67%;
+        }
+
         tr {
             padding: 0;
 
