--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -49,8 +49,10 @@
 
             .cart-btn {
                 gap: 3px;
-                padding: 10px;
+                width: 40px;
+                aspect-ratio: 1;
                 border: 1px solid #ccc;
+                color: var(--text-color1);
                 background-color: transparent;
                 cursor: pointer;
                 outline: none;
@@ -134,6 +136,9 @@
         .menu-icon {
             justify-content: flex-end;
             font-size: 1.3em;
+            border: none;
+            background-color: transparent;
+            outline: none;
 
             span {
                 border-radius: 3px;
@@ -143,12 +148,14 @@
                 aspect-ratio: 1;
                 padding: 5px;
                 display: none;
+            }
 
-                &:active {
+            &:active {
+                span {
                     background-color: var(--text-color1);
                     color: var(--notification-bg);
                     transform: scale(0.8);
-              }
+                }
             }
         }
     }
@@ -156,44 +163,53 @@
     .profile {
 
         .profile_info {
-            position: absolute;
             top: 100%;
             right: 0;
             background-color: white;
-            padding: 20px;
+            padding: 10px;
             border-radius: 5px;
-            gap: 10px;
-            min-width: 120px;
+            gap: 5px;
+            width: max-content;
             transition: 0.5s opacity ease;
             pointer-events: none;
             opacity: 0;
             z-index: 11111;
 
-            .uid {
-                font-size: 0.8em;
-                color: var(--text-color1)
+            .username {
+                font-size: 0.9em;
+                color: var(--text-color2);
             }
 
-            a {
-                color: white;
-                background-color: var(--text-color1);
-                padding: 5px;
-                font-size: 0.7em;
+            .profile-btn {
+                font-weight: bold;
+                padding: 5px 10px;
                 text-decoration: none;
                 text-align: center;
-                border-radius: 4px;
-            }
-
-            button {
-                width: 100%;
-                background: none;
-                color: var(--text-color1);
+                cursor: pointer;
                 border: none;
-                border-radius: none;
-                font-size: 0.9em;
+                outline: none;
+                border-radius: 3px;
+                font-size: .9rem;
+                min-height: 30px;
 
-                &:hover {
-                    text-decoration: underline;
+                &.view-btn {
+                    color: white;
+                    background-color: var(--notification-bg);
+                    opacity: .8;
+                
+                    &:hover {
+                        opacity: 1;
+                    }
+                }
+                    
+                &.logout-btn {
+                    color: white;
+                    background-color: var(--text-color2);
+                    opacity: .8;
+                    
+                    &:hover {
+                        opacity: 1;
+                    }
                 }
             }
         }
