--- a/src/styles/notification.scss
+++ b/src/styles/notification.scss
@@ -10,8 +10,15 @@
     z-index: 8888;
 
     h2 {
-        font-size: 1.3em;
         font-weight: 500;
+        font-size: 1rem;
+    }
+
+    button {
+        border: none;
+        background-color: transparent;
+        outline: none;
+        cursor: pointer;
     }
 }
 
