--- a/src/styles/order.scss
+++ b/src/styles/order.scss
@@ -1,6 +1,5 @@
 .orders {
 
-
     .container {
         padding: 15px;
 
@@ -115,6 +114,24 @@
             }
         }
     }
+    
+    @media (max-width: 500px) {
+        .container {
+            padding: 0;
+        }
+    
+        .filters {
+            flex-wrap: wrap;
+            gap: 10px;
+            margin-top: 15px;
+    
+            .action-btn {
+                padding: 5px 10px !important;
+                font-size: .85rem;
+                margin: 0;
+            }
+        }
+    }
 }
 
 .order {
@@ -185,6 +202,4 @@
             }
         }
     }
-
-    
 }
