Added loading styling for table details

--- a/src/styles/cardinfo.scss
+++ b/src/styles/cardinfo.scss
@@ -57,6 +57,13 @@
                     }
                 }
             }
+
+            &.loading-det {
+                max-width: 250px;
+                tr {
+                    height: 25px;
+                }
+            }
         }
     }
 
