--- a/src/styles/choose-user.scss
+++ b/src/styles/choose-user.scss
@@ -1,8 +1,8 @@
 .choose-users {
     min-height: 100vh;
-    min-width: 100vh;
+    padding: 10px;
 
-    .container {
+    .account-container {
         background-color: white;
         max-width: 550px;
         padding: 15px;
@@ -15,12 +15,12 @@
         }
 
         ul {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
             gap: 10px;
             margin: 20px auto;
 
             li {
-                min-width: 200px;
-                max-width: 300px;
                 padding: 5px;
                 flex: 1;
                 box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
@@ -35,7 +35,7 @@
                     img {
                         aspect-ratio: 1;
                         border-radius: 5px;
-                        border-color: var(--notification-bg)
+                        object-fit: cover;
                     }
                 }
 
@@ -69,7 +69,7 @@
                 }
 
                 &:hover {
-                    background-color: rgb(245, 245, 245);
+                    background-color: rgba(13, 255, 0, 0.1);
                     transform: translateY(-5px);
                     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
                 }
@@ -90,6 +90,12 @@
                     background-color: var(--text-color3);
                 }
             }
+        }
+    }
+
+    @media (max-width: 600px) {
+        .account-container ul {
+            grid-template-columns: 1fr;
         }
     }
 }
