Added background color variable to card class and added hover effect for the card class

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -76,36 +76,22 @@
     grid-row-gap: 15px;
 
     .card {
+        --background: linear-gradient(90deg, rgb(240, 240, 240), rgb(255, 255, 255), rgb(240, 240, 240));
         padding: 10px;
         gap: 10px;
         height: 100%;
-
-        &.prem_card {
-            --background: linear-gradient(-70deg, rgb(139, 117, 75), rgb(255, 240, 154), rgb(139, 117, 75));
-            --border-clr: rgb(255, 240, 154);
-        }
+        background: var(--background);
+        border-color: var(--border);
+        background-size: 120% 100%;
+        background-position: 100% 0;
+        transition: background-position 0.2s ease;
 
         &.premium_card {
-            border-color: var(--border-clr);
+            --background: linear-gradient(90deg, rgb(139, 117, 75), rgb(255, 240, 154), rgb(139, 117, 75));
+            --border: rgb(255, 240, 154);
 
             .card-desc {
                 color: black !important;
-            }
-
-            &:before {
-                content: "";
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background: var(--background);
-                z-index: 0;
-            }
-
-            * {
-                position: relative;
-                z-index: 1;
             }
         }
 
@@ -151,68 +137,8 @@
             } 
         }
 
-        
-    }
-}
-
-.meter_container {
-    margin: 15px 0;
-    gap: 5px;
-    padding: 15px;
-
-    .meter_text {
-        top: 0;
-        left: 2%;
-        background-color: white;
-        color: var(--notification-bg);
-        padding: 0 15px;
-        transform: translateY(-50%);
-    }
-
-    .meter {
-        border-radius: 3px;
-        overflow: hidden;
-        background-color: var(--text-color2);
-        gap: 2px;
-        border: 2px solid var(--text-color2);
-        max-width: 500px;
-
-        li {
-            padding: 7px 10px;
-            color: var(--border);
-            font-weight: bold;
-            text-align: center;
-            border-right: 2px solid var(--text-color2);
-            border-radius: 2px;
-
-            &:last-child, &.active {
-                border: none;
-            }
-
-            &.active {
-                background-color: var(--notification-bg);
-                color: var(--text-color1);
-
-                &:before {
-                    content: "";
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    background: linear-gradient(rgba(255, 255, 255, 0.2), transparent, rgba(0, 0, 0, 0.3));
-                }
-            }
-        }
-
-        &:before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(rgba(0, 0, 0, 0.3), transparent, rgba(255, 255, 255, 0.2));
+        &:hover {
+            background-position: 0 0;
         }
     }
 }
