--- a/src/styles/order.scss
+++ b/src/styles/order.scss
@@ -80,36 +80,11 @@
                 }
                 &.cancelled {
                     &:before {
-                        background-color: var(--text-color2);
+                        background-color: rgb(143, 47, 47);
                     }
                     .status {
-                        color: rgb(131, 27, 27);
+                        color: rgb(213, 34, 34);
                     }
-                }
-            }
-        }
-
-        .pagination {
-            align-items: center;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 30px;
-            
-            .page {
-                width: 45px;
-                height: 45px;
-                align-items: center;
-                justify-content: center;
-                padding: 0;
-                border-color: var(--notification-bg);
-                color: var(--text-color2);
-                cursor: pointer;
-
-                &:hover,
-                &.current-page {
-                    background-color: var(--notification-bg);
-                    color: white;
                 }
             }
         }
@@ -136,6 +111,13 @@
 
 .order {
 
+    .title {
+        justify-content: space-between;
+
+        a {
+            color: var(--notification-bg);
+        }
+    }
 
     .order-details {
         background-color: var(--border);
