Made responsive changes and truncate class to 'index.scss'

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -7,10 +7,26 @@
     
 
     .navigate {
-        justify-content: space-evenly;
         padding: 30px 20px;
-        flex-wrap: wrap;
         gap: 10px;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+
+        @media (max-width: 820px) {
+            grid-template-columns: repeat(4, 1fr);
+        }
+
+        @media (max-width: 640px) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+
+        @media (max-width: 480px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media (max-width: 360px) {
+            grid-template-columns: 1fr;
+        }
 
         .footer_nav {
             flex: 1;
